# ROS2_BASICS

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/my_cpp_pkg/share/my_cpp_pkg/: package.sh  package.zsh
install/my_py_pkg/lib/my_py_pkg/: baterry
install/my_py_pkg/share/my_py_pkg/: package.sh
install/my_robot_bringup/share/my_robot_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
log/: latest_build
scr/install/: local_setup.sh  setup.ps1  setup.sh
scr/log/: latest_build
scr/my_cpp_pkg/: CMakeLists.txt
scr/my_cpp_pkg/src/: my_first_node.cpp
scr/my_cpp_pkg/src/install/: local_setup.sh  setup.bash  setup.sh  setup.zsh
scr/my_cpp_pkg/src/log/: latest_build
scr/my_py_pkg/: package.xml  setup.py
scr/my_py_pkg/install/: local_setup.sh  setup.sh
scr/my_py_pkg/log/: latest_build
scr/my_py_pkg/my_py_pkg/: add_two_ints_client.py  add_two_ints_server.py  hw_status_publisher.py  led_panel.py  number_counter.py  number_counter_client.py  number_publisher.py  robot_news_station.py
scr/my_robot_bringup/: CMakeLists.txt  package.xml
scr/my_robot_bringup/launch/: number_app.launch.py  smartphone_app.launch.py  turtlesim_catch_them.launch.py
scr/my_robot_interfaces/: CMakeLists.txt
scr/my_robot_interfaces/srv/: ComputerRectangleArea.srv
scr/turtlesim_catch_them/: package.xml  setup.cfg  setup.py
scr/turtlesim_catch_them/turtlesim_catch_them/: turtle_controller.py  turtle_spawn.py
scr/turtlesim_catch_them_all/: package.xml  setup.py
(+47 files in other folders)
